2007-07-25  Jesse van den Kieboom  <jesse@icecrew.nl>

	* gedit/gedit-view.c: added call to gtk_drag_finish after emitting
	drop_uris
	
2007-07-25  Jesse van den Kieboom  <jesse@icecrew.nl>

	* gedit/gedit-utils.h:
	* gedit/gedit-utils.c:
	* gedit/gedit-window.c:
	* gedit/gedit-view.c:
	* gedit/gedit-view.h:
	
	Moved handling drag and drop of the view from GeditWindow into 
	GeditView. Added a signal 'drop-uris' to GeditView which is emitted
	when uris have been dropped on the view. All the dnd for the view is
	now handled in the default signal handlers for drag_motion, drag_drop
	and drag_data_received. This way, the default behaviour of gedit
	loading uris dropped on the view can be changed by connecting to
	the drag_drop and drag_data_received signals from for example a 
	plugin. This wasn't possible before because the window connected
	signals to the view which made it impossible to intervene the signal
	handling.

2007-07-23  Paolo Borelli  <pborelli@katamail.com>

	* bindings/python/gedit.defs:
	* data/gedit.schemas.in:
	* gedit/gedit-view.c:
	* gedit/gedit-view.h:
	* gedit/gedit-prefs-manager.c:
	* gedit/gedit-prefs-manager.h:
	* gedit/gedit-prefs-manager-app.c:

	Remove all code and preferences related to setting colors.
	It has been superceeded by style scheme support

2007-07-20  Steve Frécinaux  <code@istique.net>

	* gedit/gedit-document-loader.[ch]:
	* gedit/gedit-mmap-document-loader.[ch]:
	* gedit/gedit-gnomevfs-document-loader.[ch]:
	* gedit/gedit-document.c:

	Split GeditDocumentLoader into an abstract type and implementations of
	it (Bug 453048).

2007-07-20  Paolo Maggi  <paolo@gnome.org>

	First step toward the new preference dialog
	
	* gedit/dialogs/Makefile.am: compile new files
	
	* gedit/dialogs/gedit-preferences-dialog.c: set the new "Font & Colors" 
	page
	* gedit/dialogs/gedit-preferences-dialog.glade: new "Font & Colors" 
	page
	* gedit/dialogs/gedit-style-scheme-dialog.[ch]: new files